--- a/MediaScreenStyles.css
+++ b/MediaScreenStyles.css
@@ -3,7 +3,7 @@
     .NavMenu.responsive {position: relative;}
     .NavMenuItem {display: none;}
     .NavMenu button.mobileDropbtn{display: block;}  
-    .NavMenu button{padding: 15px 4.9vw; max-height: 50px;}
+    .NavMenu button{padding: 15px 4.9vw; max-height: 50px;color:red;}
     .navbar {height: 50px;}
     .dropdown-content {
       position:fixed;
