--- a/MediaScreenStyles.css
+++ b/MediaScreenStyles.css
@@ -4,15 +4,17 @@
     .NavMenuItem {display: none;}
     .NavMenu button.mobileDropbtn{display: block;}  
     .NavMenu button{padding: 15px 4.9vw; max-height: 50px;}
-    .NavMenu button:hover{color:red; }
+    .NavMenu button:hover {color:rgb(194, 168, 168);; .arrow{border:solid rgb(194, 168, 168); border-width: 0 2px 2px 0;}}
+
     .navbar {height: 50px;}
     .dropdown-content {
       position:fixed;
-      top:20px; left:0;
-      width:100%;
+      top:31px; left:0;
+      width:105%;
       padding-left: 20px;
+      margin-left: 0px;
     }
-    .ServicesMenuContainer {
+    .InformationContainer {
         margin: 71px auto auto auto;
     }
     .ServicesMenuContents {
@@ -27,13 +29,13 @@
 /* To hide menu items that aren't necessary */
 @media screen and (max-width: 864px) {
     .extraInfo {display: none;}
-    .KeyItem {padding: 24px 4.5vw;}
+    .KeyItem {padding: 16px 4.5vw;}
     .NavMenu button.regularDropbtn{
         display: block;        
-        padding: 3vw;        
+        padding: 2vw;        
     }
     .dropdown-content {
-      margin-left: -4.5%;
+      margin-left: -4.9%;
       
     }
   }
