--- a/NavMenu.css
+++ b/NavMenu.css
@@ -4,12 +4,12 @@
   display: flex;
   position: fixed;
   padding:0;
-  height: 80px;
+  height: 60px;
   top: 0;
   left: 0;
   width: 100%;
   right: 0;
-  background-color: #333;
+  background-color: #00599c;
 }
 
 .NavMenu {
@@ -28,14 +28,14 @@
     width:auto;
     display:block;
     list-style-type: none;
-    padding: 24px 2vw;   
+    padding: 16px 2vw;   
     text-decoration: none; 
-    color: red;
+    color: white;
 
 }
 
 .NavMenuItem:hover {
-  color: rgb(124, 5, 5);
+  color: rgb(194, 168, 168);
 }
 
 
@@ -43,8 +43,9 @@
 
 .NavMenu .dropbtn {
   display:none;
-  color:red;
-  background-color: #333;
+  color:white;
+  background-color: #00599c;
+  
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -56,7 +57,7 @@
 }
 
 .arrow {
-  border: solid red;
+  border: solid white;
   border-width: 0 2px 2px 0;
 
   display: inline-block;
@@ -67,13 +68,35 @@
 }
 
 .NavMenu button:hover{
-  color: rgb(124, 5, 5);
+  color: rgb(194, 168, 168);
   .arrow {
-    border: solid rgb(124,5,5);
+    border: solid rgb(194, 168, 168);
     border-width: 0 2px 2px 0;
   } 
 
 }
 
 
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #002d62;
+    border-top: solid rgb(0, 0, 94);
+    z-index: 1;
+    margin-top: 17px;
+}
+  
+  /* Links inside the dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-align: left;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover{
+    color: rgb(194, 168, 168);
+}
 
