--- a/ServicesMenu.css
+++ b/ServicesMenu.css
@@ -1,13 +1,6 @@
 
 /* Make floating background */
-.ServicesMenuContainer {
 
-    margin: 100px auto 300px auto;
-    width:92%; 
-    height: auto; 
-    background-color: rgb(94, 5, 5);
-
-}
 
 .ServicesMenuContents {
     display: flex;
@@ -22,8 +15,8 @@
 .ServicesMenuItem {
     margin: auto auto 40px auto;
     border-radius: 10px;
-    border: solid coral;
-    background-color: rgb(85, 62, 45);
+    border: solid #00599c;
+    background-color: #043673;
     width: auto;
 
 
@@ -56,26 +49,3 @@
     color: transparent;
 }
 
-
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    border-top: solid red;
-    z-index: 1;
-    margin-top: 25px;
-}
-  
-  /* Links inside the dropdown */
-.dropdown-content a {
-    color: red;
-    padding: 12px 16px;
-    text-align: left;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover{
-  color: rgb(124, 5, 5);
-}
